--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,8 @@ analytics:
 # Site Author
 author:
   name             : "saba"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/2.jpg
+"
   bio              : I'm the best student.
   location         : "تهران"
   email            : 
