--- a/_config.yml
+++ b/_config.yml
@@ -87,9 +87,9 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : sauleh_e
+  username               :saBam69
 facebook:
-  username               : sauleh.eetemadi
+  username               : saba mahdian
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -114,7 +114,7 @@ author:
   avatar           : "/assets/images/2.jpg
 "
   bio              : I'm the best student.
-  location         : "تهران"
+  location         : "کرج"
   email            : 
   twitter: sauleh_e
   linkedin: sauleh
