--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   name             : "saba"
   avatar           : "/assets/images/2.jpg
 "
-  bio              : I'm the best student.
+  bio              : "good"
   location         : "کرج"
   email            : 
   twitter: sauleh_e
