--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,7 @@ analytics:
 # Site Author
 author:
   name             : "saba"
-  avatar           : "/assets/images/2.jpg
-"
+  avatar           : 
   bio              : "good"
   location         : "کرج"
   email            : 
