--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   name             : "saba"
   avatar           : 
   bio              : "good"
-  location         : " کرج ""
+  location         : " کرج "
   email            : 
   twitter: saba
   linkedin: saba
