--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,7 @@ title                    : "saba"
 title_separator          : "yo"
 name                     : "saba" 
 description              : "salam"
-url                      : # the base host
-
-
- & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : # the base host & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
