--- a/_config.yml
+++ b/_config.yml
@@ -109,14 +109,14 @@ analytics:
 author:
   name             : "saba"
   avatar           : 
-  bio              : "good"
+  bio              : "69"
   location         : " کرج "
-  email            : 
-  twitter: saba
-  linkedin: saba
+  email            : "saba_mahdian40@comp.iust.ac.ir"
+  twitter: 
+  linkedin: 
   google_scholar: Q25s5KkAAAAJ
   github: 
-  instagram: saba
+  instagram: 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
