--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
     url: /gallery/
   - title: "Blog"
     url: /blog/
-  - title: "calendar"
-    url: <iframe src="https://calendar.google.com/calendar/embed?src=radmanmohii%40gmail.com&ctz=Asia%2FTehran" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  - title: "Calendar"
+    url: /calendar/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
